--- a/archiso/airootfs/etc/nsswitch.conf
+++ b/archiso/airootfs/etc/nsswitch.conf
@@ -3,12 +3,12 @@
 # we changed nsswitch.conf to have access to nas servers
 # This config file comes from the package filesystem
 # Added two & otherwise installation script 140 
-# from ArcoLinuxD will change it
+# from LoopLinuxD will change it
 
 # This is the original line (minus 2 &)
 # hosts: files & mymachines myhostname resolve [!UNAVAIL=return] & dns
 
-# This is our ArcoLinux line
+# This is our LoopLinux line
 # hosts: files mymachines resolve [!UNAVAIL=return] mdns dns wins myhostname
 
 passwd: files mymachines systemd
